@@ -13,6 +13,7 @@ gae-wiki 1.1
 - Fixed page labels not being shown.
 - Added label RSS feeds (/w/pages.rss?label=xyz).
 - [[List:xyz]] now supports the display_title page property.
+- Better support for redirects.
 
 
 gae-wiki 1.0 (20110514)
